--- a/package.json
+++ b/package.json
@@ -37,13 +37,19 @@
     "del": "^0.1.3",
     "gulp": "^3.8.8",
     "gulp-autoprefixer": "^1.0.1",
+    "gulp-jasmine": "^2.0.0",
     "gulp-less": "1.3.6",
     "gulp-minify-css": "^0.3.11",
     "gulp-notify": "^2.0.0",
     "gulp-rename": "^1.2.0",
     "gulp-uglify": "^1.0.1",
     "gulp-util": "^3.0.1",
+    "jasmine-core": "^2.2.0",
     "jquery": "^2.1.3",
+    "karma": "^0.12.31",
+    "karma-jasmine": "^0.3.5",
+    "karma-phantomjs-launcher": "^0.1.4",
+    "karma-spec-reporter": "0.0.16",
     "pretty-hrtime": "^0.2.2",
     "react-tools": "^0.11.0",
     "reactify": "0.14.0",
